feat(analytics): 속성+종합 통합 포트 ContentInsightPort — 잡 1콜화, Anthropic은 컴포지트 보존 + 문구 절제 규칙
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>